chore: update pnpm-lock.yaml and package.json

--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "types": "./src/index.ts",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
+      "types": "./src/index.ts",
       "import": "./dist/index.js"
     },
     "./components/*": {
@@ -42,6 +42,8 @@
     }
   },
   "devDependencies": {
+    "@vue/compiler-sfc": "^3.4.0",
+    "esbuild-plugin-vue3": "^0.4.2",
     "tsup": "^8.0.0",
     "typescript": "^5.3.0",
     "vue": "^3.4.0"
