docs: update README and documentation to include online demo links for Vue and React

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -53,8 +53,9 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/user/incremark.git",
+    "url": "https://github.com/kingshuaishuai/incremark.git",
     "directory": "packages/core"
-  }
+  },
+  "homepage": "https://incremark-docs.vercel.app/"
 }
 
