--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -27,6 +27,12 @@
   "devDependencies": {
     "tsup": "^8.0.0",
     "typescript": "^5.3.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kingshuaishuai/incremark.git",
+    "directory": "packages/devtools"
+  },
+  "homepage": "https://incremark-docs.vercel.app/"
 }
 
