--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -32,6 +32,12 @@
     "react": "^18.2.0",
     "tsup": "^8.0.0",
     "typescript": "^5.3.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kingshuaishuai/incremark.git",
+    "directory": "packages/react"
+  },
+  "homepage": "https://incremark-docs.vercel.app/"
 }
 
