feat: add styles support for React and Vue package

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -11,13 +11,14 @@
     ".": {
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
-    }
+    },
+    "./styles.css": "./dist/styles.css"
   },
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "tsup",
+    "build": "tsup && cp src/styles.css dist/styles.css",
     "dev": "tsup --watch"
   },
   "peerDependencies": {
