feat: add support for React in Incremark with new components and hooks, including benchmark and custom input panels

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "paths": {
       "@incremark/core": ["./packages/core/src/index.ts"],
       "@incremark/vue": ["./packages/vue/src/index.ts"],
+      "@incremark/react": ["./packages/react/src/index.ts"],
       "@incremark/devtools": ["./packages/devtools/src/index.ts"]
     }
   },
