refactor: remove unused styles.css

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,12 +18,10 @@
     "./utils": {
       "types": "./dist/utils/index.d.ts",
       "import": "./dist/utils/index.js"
-    },
-    "./transformer/styles.css": "./src/transformer/styles.css"
+    }
   },
   "files": [
-    "dist",
-    "src/transformer/styles.css"
+    "dist"
   ],
   "scripts": {
     "build": "tsup",
