--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -14,6 +14,7 @@
     "@incremark/react": "workspace:*",
     "@incremark/theme": "workspace:*",
     "echarts": "^6.0.0",
+    "katex": "^0.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
